force-app/main/default/objects/PaymentOrBillingSetting__c/PaymentOrBillingSetting__c.object-meta.xml
<CustomObject>
    <label>支払/請求設定</label>
    <nameField>
        <displayFormat>PB-{000000000}</displayFormat>
        <label>支払/請求設定名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>