force-app/main/default/objects/PaymentOrBillingSetting__c/fields/BillingName__c.field-meta.xml
<CustomField>
    <fullName>BillingName__c</fullName>
    <label>請求先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>