force-app/main/default/objects/PaymentOrBillingSetting__c/fields/CancelCalculate__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約精算</label>
    <referenceTo>CancelCalculate__c</referenceTo>
    <relationshipLabel>支払/請求設定</relationshipLabel>
    <relationshipName>CancelCalculate_POB</relationshipName>
    <type>Lookup</type>
</CustomField>