force-app/main/default/objects/PaymentOrBillingSetting__c/fields/IsTransferChargesPartnerPay__c.field-meta.xml
<CustomField>
    <fullName>IsTransferChargesPartnerPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>振込手数料先方負担</label>
    <type>Checkbox</type>
</CustomField>