force-app/main/default/objects/PaymentOrBillingSetting__c/fields/PaymentOrBillingCategory__c.field-meta.xml
<CustomField>
    <fullName>PaymentOrBillingCategory__c</fullName>
    <label>支払/請求区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>支払/請求</fullName>
            </value>
            <value>
                <fullName>請求</fullName>
            </value>
            <value>
                <fullName>支払</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>