force-app/main/default/objects/PaymentOrBillingSetting__c/fields/PaymentTransferContractor__c.field-meta.xml
<CustomField>
    <fullName>PaymentTransferContractor__c</fullName>
    <label>振込元口座名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>