force-app/main/default/objects/PaymentOrBillingSetting__c/fields/RemittanceDestination__c.field-meta.xml
<CustomField>
    <fullName>RemittanceDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>POBSBankAccountRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>