force-app/main/default/objects/PaymentOrBillingSetting__c/fields/TaxRate1ExcludingAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxRate1ExcludingAmount__c</fullName>
    <label>税率1税抜額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>