force-app/main/default/objects/PaymentOrBillingSetting__c/fields/TaxRate1FixedAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxRate1FixedAmount__c</fullName>
    <formula>TaxRate1Amount__c + TaxRate1AmountRevision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>税率1税額（計算値）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>