force-app/main/default/objects/PaymentOrBillingSetting__c/fields/TaxRate2__c.field-meta.xml
<CustomField>
    <fullName>TaxRate2__c</fullName>
    <label>税率2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>