force-app/main/default/objects/PaymentOrBillingSetting__c/fields/TaxRate2Amount__c.field-meta.xml
<CustomField>
    <fullName>TaxRate2Amount__c</fullName>
    <label>税率2税額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>