force-app/main/default/objects/PaymentOrBillingSetting__c/fields/TaxRate2FixedAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxRate2FixedAmount__c</fullName>
    <formula>TaxRate2Amount__c + TaxRate2AmountRevision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>税率2税額（計算値）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>