force-app/main/default/objects/PaymentOrBillingSetting__c/fields/TotalExcludingTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalExcludingTaxAmount__c</fullName>
    <formula>TaxRate1ExcludingAmount__c + TaxRate2ExcludingAmount__c + ExemptAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>税抜額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>