force-app/main/default/objects/PaymentOrBillingSetting__c/fields/TotalTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxAmount__c</fullName>
    <formula>TaxRate1FixedAmount__c + TaxRate2FixedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>税額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>