force-app/main/default/objects/PaymentOrBillingSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rent__c</columns>
    <columns>RemittanceDestination__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>